css styles fixed for side articles

--- a/app/assets/stylesheets/_category.css.scss
+++ b/app/assets/stylesheets/_category.css.scss
@@ -13,8 +13,8 @@
       text-shadow: 1px 1px #191919;
       padding: 20px;
       margin: 0;
-      color: #4ABEB6;
-      font-family: 'Playfair Display', serif;
+      color: #4abeb6;
+      font-family: "Playfair Display", serif;
       font-size: 40px;
       font-weight: bold;
     }
