--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="content_hint"></div>
-    <h1 class="section--title mb-0"><a href="/search">Recent Articles</a></h1>
+    <h1 class="section--title"><a href="/search">Recent Articles</a></h1>
     <%= render_async_cache get_recent_posts_path, retry_count: 3 %>
     <div class="content_hint"></div>
   </div>
