--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -18,7 +18,7 @@
   .question {
     margin: 0;
     font-weight: 800;
-    color: #4ABEB6;
+    color: #4abeb6;
     font-size: 25px;
   }
 }
@@ -35,7 +35,7 @@
     p {
       margin: 0;
       width: 33%;
-      color: #4ABEB6;
+      color: #4abeb6;
       display: inline-block;
     }
   }
@@ -45,7 +45,7 @@
       font-size: 18px;
     }
     .blank {
-      color: #D3D3D3;
+      color: #d3d3d3;
       display: inline-block;
     }
   }
@@ -85,7 +85,7 @@
   padding: 0;
   border: none;
   text-decoration: underline;
-  color: #4ABEB6;
+  color: #4abeb6;
   &:hover {
     cursor: pointer;
   }
@@ -129,7 +129,8 @@
   padding: 3% 5%;
   max-width: 800px;
   width: 90%;
-  h2, h4 {
+  h2,
+  h4 {
     font-family: "Playfair Display";
   }
 }
