--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -36,12 +36,13 @@
   .title {
     border-bottom: 1px dotted #9a9da4;
   }
-  .title, .title a {
-    color: #4ABEB6;
-    margin-bottom:  10px;
+  .title,
+  .title a {
+    color: #4abeb6;
+    margin-bottom: 10px;
     padding-bottom: 10px;
     text-shadow: 0.5px 0.5px #191919;
-    font-family: 'Roboto Condensed Bold', sans-serif;
+    font-family: "Roboto Condensed Bold", sans-serif;
     text-decoration: none;
   }
   figure {
@@ -72,8 +73,8 @@
         font-size: 1em;
         margin: 0;
         margin-left: 15px;
-        line-height: 18px;
-        font-family: 'Roboto Condensed Bold', sans-serif;
+        line-height: 1.4 !important;
+        font-family: "Roboto Condensed Bold", sans-serif;
         font-style: italic;
         a {
           color: #191919;
@@ -129,39 +130,42 @@
     position: relative;
     max-width: 100% !important;
   }
-  #comment_field, #comment_field_reply {
+  #comment_field,
+  #comment_field_reply {
     outline: 0;
     margin: 0 !important;
     border-width: 2px !important;
-    border-color: #E9E9E9;
+    border-color: #e9e9e9;
     padding: 5px !important;
     border-radius: 5px;
     min-height: 96px;
     height: 96px;
   }
-  #comment_field:focus, #comment_field_reply:focus {
-    border-color: #4ABEB6;
+  #comment_field:focus,
+  #comment_field_reply:focus {
+    border-color: #4abeb6;
   }
 }
 
 .share_article_feedback {
   h3 {
     margin: 0;
-    font-family: 'Playfair Display';
+    font-family: "Playfair Display";
   }
   .comments {
-    #anchor_link:hover, #anchor_link:hover i {
+    #anchor_link:hover,
+    #anchor_link:hover i {
       color: #212529 !important;
       transition: color 0.6s ease !important;
       cursor: pointer;
     }
     .fa-quote {
       font-size: 10px;
-      color: #A6A09E;
+      color: #a6a09e;
     }
     .reply_form_wrapper {
-       display: none;
-     }
+      display: none;
+    }
     .submit_comment {
       width: 35px;
       height: 35px;
@@ -218,12 +222,12 @@
 .text_field {
   outline: 0;
   border-width: 0 0 2px !important;
-  border-color: #E9E9E9;
+  border-color: #e9e9e9;
   margin: 0 !important;
   padding: 5px !important;
 }
 .text_field:focus {
-  border-color: #4ABEB6;
+  border-color: #4abeb6;
 }
 
 .post_apply {
@@ -244,7 +248,8 @@
   background-color: white;
 }
 
-.post_apply, .share_article_feedback {
+.post_apply,
+.share_article_feedback {
   min-width: 330px;
   max-width: 330px;
   z-index: 30;
@@ -280,7 +285,7 @@
   .post {
     text-align: center;
     .date {
-      font-size: .9em;
+      font-size: 0.9em;
       margin: 0;
     }
     h2 {
@@ -292,7 +297,7 @@
         text-decoration: none;
         color: #424653;
         &:hover {
-          color: #4ABEB6;
+          color: #4abeb6;
         }
       }
     }
@@ -316,7 +321,7 @@
     a {
       font-family: "Roboto Condensed Light";
       color: #212529;
-      margin-bottom: .5rem !important;
+      margin-bottom: 0.5rem !important;
       &:hover {
         text-decoration: none;
         color: inherit;
@@ -337,14 +342,14 @@
   h1 {
     margin-top: 30px;
     margin-bottom: 15px;
-    color: #4ABEB6;
+    color: #4abeb6;
     text-shadow: 1px 1px #191919;
     font-size: 50px;
-    font-family: 'Roboto Condensed Bold', sans-serif;
+    font-family: "Roboto Condensed Bold", sans-serif;
   }
   h3 a {
     font-size: 15px;
-    font-family: 'Roboto Condensed Bold', sans-serif;
+    font-family: "Roboto Condensed Bold", sans-serif;
     margin: 0;
     margin-top: 23px;
     font-weight: lighter;
@@ -363,68 +368,68 @@
 }
 
 #content {
-   padding: 0 30px;
-   .post_content {
-     br {
-       display: none;
-     }
-     padding-bottom: 20px;
-     img {
-       width: 70% !important;
-       height: auto !important;
-       margin: 25px auto !important;
-       display: block;
-     }
-     iframe {
-       margin: 0 auto !important;
-     }
+  padding: 0 30px;
+  .post_content {
+    br {
+      display: none;
+    }
+    padding-bottom: 20px;
+    img {
+      width: 70% !important;
+      height: auto !important;
+      margin: 25px auto !important;
+      display: block;
+    }
+    iframe {
+      margin: 0 auto !important;
+    }
     html {
-       margin-left: auto;
-       margin-right: auto;
-     }
-      #twitter-widget-0, #twitter-widget-1 {
-       margin: 0 auto !important;
-     }
-     a {
-       color: #4ABEB6;
-     }
-     a:hover {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #twitter-widget-0,
+    #twitter-widget-1 {
+      margin: 0 auto !important;
+    }
+    a {
+      color: #4abeb6;
+    }
+    a:hover {
       opacity: 0.5;
-     }
-     blockquote {
-       border-left: 5px solid #cccccc;
-       padding-left: 10px;
-     }
-     h1 span {
-       font-size: 2.5rem !important;
-     }
+    }
+    blockquote {
+      border-left: 5px solid #cccccc;
+      padding-left: 10px;
+    }
+    h1 span {
+      font-size: 2.5rem !important;
+    }
 
-     h2 span {
-       font-size: 2rem !important;
-     }
+    h2 span {
+      font-size: 2rem !important;
+    }
 
-     h3 span {
-       font-size: 1.75rem !important;
-     }
+    h3 span {
+      font-size: 1.75rem !important;
+    }
 
-     h4 span {
-       font-size: 1.375rem !important;
-     } span
+    h4 span {
+      font-size: 1.375rem !important;
+    }
+    span h5 span {
+      font-size: 1.25rem !important;
+    }
 
-     h5 span {
-       font-size: 1.25rem !important;
-     }
-
-     h6 span {
-       font-size: 1rem !important;
-     }
-     @media (max-width: 600px) {
+    h6 span {
+      font-size: 1rem !important;
+    }
+    @media (max-width: 600px) {
       img {
-          width: 100% !important;
+        width: 100% !important;
       }
-     }
-   }
- }
+    }
+  }
+}
 
 #share_box {
   text-align: center;
@@ -434,13 +439,13 @@
     font-weight: 700;
     text-transform: uppercase;
     color: #424653;
-    font-size: .8em;
+    font-size: 0.8em;
   }
   i {
     color: #424653;
     padding: 1em 1.5em;
     &:hover {
-      color: #4ABEB6;
+      color: #4abeb6;
       cursor: pointer;
     }
   }
@@ -469,38 +474,41 @@
 }
 
 @media (max-width: 800px) {
-    .skinny {
-      iframe { width: 100% !important }
-      #post_title_show {
-        padding: 1px 20px;
-        margin-bottom: 10px;
-        h1 {
-          font-size: 35px !important;
-        }
+  .skinny {
+    iframe {
+      width: 100% !important;
+    }
+    #post_title_show {
+      padding: 1px 20px;
+      margin-bottom: 10px;
+      h1 {
+        font-size: 35px !important;
       }
     }
+  }
 
-    #content, .post_apply {
+  #content,
+  .post_apply {
+    padding: 0 15px !important;
+  }
+
+  .share_article_feedback {
+    padding: 0 40px !important;
+  }
+  .post_apply {
+    .contain_articles {
       padding: 0 15px !important;
     }
-
-    .share_article_feedback {
-      padding: 0 40px !important;
-    }
-    .post_apply {
-      .contain_articles {
-        padding: 0 15px !important;
-      }
-    }
+  }
 }
 
-@media(max-width: 435px) {
+@media (max-width: 435px) {
   .second_author {
     margin-top: 0 !important;
   }
 }
 
-@media(min-width: 1075px) and (max-width: 1240px) {
+@media (min-width: 1075px) and (max-width: 1240px) {
   .authors {
     display: inline-block !important;
     .second_author {
@@ -509,25 +517,25 @@
   }
 }
 
-@media(min-width: 1030px) {
+@media (min-width: 1030px) {
   .flex_wrapper_columns {
     margin-left: 20px !important;
   }
 }
 
 @media (max-width: 448px) {
-    .skinny {
-      #post_title_show {
-        padding: 0px 15px;
-        h1 {
-          padding-top: 20px;
-        }
+  .skinny {
+    #post_title_show {
+      padding: 0px 15px;
+      h1 {
+        padding-top: 20px;
       }
     }
-    #content {
-      padding: 0 15px;
-      p {
-        font-size: 17px;
-      }
+  }
+  #content {
+    padding: 0 15px;
+    p {
+      font-size: 17px;
     }
+  }
 }
