--- a/app/assets/stylesheets/_used_bootstrap.css.scss
+++ b/app/assets/stylesheets/_used_bootstrap.css.scss
@@ -20,7 +20,7 @@
 }
 
 .font-small {
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 // margins
@@ -54,11 +54,13 @@
   margin-right: 0.25rem !important;
 }
 
-.mb-1, .my-1 {
+.mb-1,
+.my-1 {
   margin-bottom: 0.25rem !important;
 }
 
-svg, img {
+svg,
+img {
   vertical-align: middle;
 }
 
@@ -80,26 +82,27 @@ svg, img {
 // footer
 
 footer.page-footer {
-    bottom: 0;
-    color: #fff
+  bottom: 0;
+  color: #fff;
 }
 
 footer.page-footer .container-fluid {
-    width: auto
+  width: auto;
 }
 
 footer.page-footer .footer-copyright {
-    overflow: hidden;
-    color: rgba(255, 255, 255, 0.6);
-    background-color: rgba(0, 0, 0, 0.2)
+  overflow: hidden;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 footer.page-footer a {
-  color: #fff
+  color: #fff;
 }
 
 .badge {
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
   display: inline-block;
   padding: 0.4em 0.6em;
   font-size: 75%;
@@ -109,14 +112,15 @@ footer.page-footer a {
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   color: white !important;
-  border-radius: .125rem;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+  border-radius: 0.125rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .bg-primary {
-  background-color: #F0255E !important;
+  background-color: #f0255e !important;
 }
 
 // responsive
