--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  border-bottom: 1px solid #E9E9E9;
+  border-bottom: 1px solid #e9e9e9;
   margin-bottom: 20px;
   .flex--profile {
     padding: 30px 0 30px 30px;
@@ -29,14 +29,14 @@
 }
 
 .submitted--articles {
-  border-bottom: 1px solid #E9E9E9;
+  border-bottom: 1px solid #e9e9e9;
   margin-bottom: 20px;
 }
 
 .box {
-  position:relative;
+  position: relative;
   vertical-align: middle;
-  color: #4ABEB6;
+  color: #4abeb6;
   display: inline-block;
   height: 60px;
   line-height: 60px;
@@ -44,7 +44,7 @@
   transition: 0.5s;
   padding: 10px;
   cursor: pointer;
-  -webkit-transition:0.5s;
+  -webkit-transition: 0.5s;
 }
 
 .editor_status {
@@ -57,49 +57,49 @@
 }
 
 .box:hover {
-  color: #4ABEB6;
+  color: #4abeb6;
 }
 
-.box::before, .box::after {
+.box::before,
+.box::after {
   width: 100%;
-  height:100%;
+  height: 100%;
   z-index: 3;
-  content:'';
+  content: "";
   position: absolute;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   box-sizing: border-box;
   -webkit-transform: scale(0);
   transition: 0.5s;
 }
 
 .foo::before {
-  border-bottom: 6px solid #4ABEB6;
-  border-left: 6px solid #4ABEB6;
+  border-bottom: 6px solid #4abeb6;
+  border-left: 6px solid #4abeb6;
   -webkit-transform-origin: 0 100%;
 }
 
 .foo::after {
-  border-top: 6px solid #4ABEB6;
-  border-right: 6px solid #4ABEB6;
+  border-top: 6px solid #4abeb6;
+  border-right: 6px solid #4abeb6;
   -webkit-transform-origin: 100% 0%;
 }
 
-
 .bar::before {
-  border-bottom: 6px solid #4ABEB6;
-  border-left: 6px solid #4ABEB6;
+  border-bottom: 6px solid #4abeb6;
+  border-left: 6px solid #4abeb6;
   -webkit-transform-origin: 100% 0%;
 }
 
 .bar::after {
-  border-top: 6px solid #4ABEB6;
-  border-right: 6px solid #4ABEB6;
+  border-top: 6px solid #4abeb6;
+  border-right: 6px solid #4abeb6;
   -webkit-transform-origin: 0% 100%;
 }
 
 .curmudgeon::before {
-  border-bottom: 6px solid #4ABEB6;
+  border-bottom: 6px solid #4abeb6;
   border-left: 0;
   -webkit-transform-origin: 0% 100%;
 }
@@ -110,7 +110,8 @@
   -webkit-transform-origin: 50% 50%;
 }
 
-.box:hover::after, .box:hover::before {
+.box:hover::after,
+.box:hover::before {
   -webkit-transform: scale(1);
 }
 
@@ -143,10 +144,10 @@
     background-size: cover;
     background-position: center;
     color: white;
-    font-family: 'Playfair Display', serif;
+    font-family: "Playfair Display", serif;
     font-weight: bold;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     flex-direction: column;
     text-align: center;
     transition: color 0.25s;
@@ -220,24 +221,24 @@
 }
 
 #background {
-  background-color:#d3d3d3;
+  background-color: #d3d3d3;
   padding: 7px;
   margin: 0 auto;
   background-image: linear-gradient(
-      to right top,
-      transparent 33%,
-      #E8E8EE 33%,
-      #E8E8EE 66%,
-      transparent 66%
+    to right top,
+    transparent 33%,
+    #e8e8ee 33%,
+    #e8e8ee 66%,
+    transparent 66%
   );
   background-size: 5px 5px;
-	background-position: 0 0, 15px 15px;
+  background-position: 0 0, 15px 15px;
 }
 
 .profile-minimal {
   flex-direction: column !important;
   text-align: center;
-  padding:0 !important;
+  padding: 0 !important;
   img {
     display: block;
     margin: 0 auto 20px auto;
@@ -277,12 +278,13 @@
       margin: 0;
     }
 
-    h2 a, h2 {
+    h2 a,
+    h2 {
       margin: 0;
       font-size: 30px;
       text-decoration: none;
-      color: #4ABEB6;
-      font-family: 'Playfair Display', serif;
+      color: #4abeb6;
+      font-family: "Playfair Display", serif;
       font-weight: bold;
     }
 
@@ -295,8 +297,9 @@
       .website_link {
         display: inline-block;
       }
-      svg, p {
-        color: #4ABEB6;
+      svg,
+      p {
+        color: #4abeb6;
         margin: 0 2px 0 0 !important;
         span {
           color: black;
@@ -331,14 +334,15 @@
   }
 }
 
-.official--writer--wrapper, .new--writer--wrapper {
+.official--writer--wrapper,
+.new--writer--wrapper {
   .flex--profile {
     opacity: 1 !important;
   }
   .dashboard--articles--wrapper {
     padding-bottom: 10px;
     .header_ttl {
-      border-bottom: 1px #E9E9E9 solid;
+      border-bottom: 1px #e9e9e9 solid;
       padding: 15px 10px;
       width: 100%;
       display: block;
@@ -346,7 +350,8 @@
   }
 }
 
-.new--writer--wrapper, .official--writer--wrapper {
+.new--writer--wrapper,
+.official--writer--wrapper {
   #waiting--for--approval {
     display: flex;
     flex-direction: row;
@@ -357,7 +362,7 @@
       position: relative;
       max-width: 1000px;
       .flex--profile {
-        z-index:1;
+        z-index: 1;
         opacity: 0.4;
         background-color: transparent;
       }
@@ -365,16 +370,17 @@
         display: flex;
         flex-direction: row;
         position: absolute;
-        z-index:0;
+        z-index: 0;
         align-items: center;
         margin: 36px 0;
         padding: 10px 30px;
         bottom: -2%;
         left: -8px;
         background-color: white;
-        border: 1px solid #C5B7B820;
+        border: 1px solid #c5b7b820;
         max-width: 390px;
-        .icon, h5 {
+        .icon,
+        h5 {
           margin: 0;
           font-weight: 400;
           font-style: italic;
@@ -393,7 +399,7 @@
     }
 
     .dashboard--writer--flex--two {
-      border-left: 1px solid #E5E5E5;
+      border-left: 1px solid #e5e5e5;
       padding: 25px 0 0 30px;
       max-width: 400px;
       p {
@@ -408,7 +414,8 @@
 }
 
 .review_items .inside--item {
-  h4, p {
+  h4,
+  p {
     padding-left: 20px;
   }
   img {
@@ -426,7 +433,8 @@
   }
 }
 
-.flex--postlist--item, .reviews_wrapper {
+.flex--postlist--item,
+.reviews_wrapper {
   .inside--item {
     display: flex;
     flex-direction: row;
@@ -446,12 +454,12 @@
     }
     p {
       font-size: 14px;
-      color: #A6A09E;
+      color: #a6a09e;
       margin: 0px;
     }
     .edit_lnk a {
       font-size: 16px;
-      color: #4ABEB6 !important;
+      color: #4abeb6 !important;
       text-decoration: underline;
       &:hover {
         text-decoration: underline !important;
@@ -468,10 +476,10 @@
   padding: 10px 10px 0px 10px;
 
   a {
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -493,7 +501,7 @@
   margin-top: 30px;
   float: right;
   margin-bottom: 20px;
-  &:hover{
+  &:hover {
     color: red;
   }
 }
@@ -519,7 +527,7 @@
     }
   }
   h3 {
-    color: #4ABEB6;
+    color: #4abeb6;
   }
   .flex--profile {
     display: flex;
@@ -562,41 +570,43 @@
       flex-direction: column-reverse !important;
     }
   }
-  .new--writer--wrapper, .official--writer--wrapper {
-      #waiting--for--approval {
-        padding-top: 10px;
-        flex-direction: column;
-        .dashboard--editor {
-          width: 100% !important;
-          margin-bottom: 15px !important;
-        }
-        .dashboard--writer--flex--two {
-          padding: 0 !important;
-          margin-top: 10px !important;
-          margin-bottom: 0px !important;
-          border-left: none;
-          max-width: 100%;
-          margin: 0 auto;
-          .whats-new-wrapper {
-            width: auto !important;
-          }
-        }
-        .dashboard--writer--flex--main {
-          margin-right: 0;
-          padding: 0;
-          width: 100%;
-          .flex--item {
-            margin: 0;
-          }
-          .analytics, .newpost--new--profile {
-            margin-right: 0;
-          }
+  .new--writer--wrapper,
+  .official--writer--wrapper {
+    #waiting--for--approval {
+      padding-top: 10px;
+      flex-direction: column;
+      .dashboard--editor {
+        width: 100% !important;
+        margin-bottom: 15px !important;
+      }
+      .dashboard--writer--flex--two {
+        padding: 0 !important;
+        margin-top: 10px !important;
+        margin-bottom: 0px !important;
+        border-left: none;
+        max-width: 100%;
+        margin: 0 auto;
+        .whats-new-wrapper {
+          width: auto !important;
         }
       }
+      .dashboard--writer--flex--main {
+        margin-right: 0;
+        padding: 0;
+        width: 100%;
+        .flex--item {
+          margin: 0;
+        }
+        .analytics,
+        .newpost--new--profile {
+          margin-right: 0;
+        }
+      }
+    }
   }
 }
 
-@media(min-width: 480px) {
+@media (min-width: 480px) {
   .badge_wrapper {
     display: inline;
   }
@@ -613,19 +623,19 @@
         font-size: 13px !important;
       }
     }
-    .profile_img  {
+    .profile_img {
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 10px;
     }
   }
 
-  .website_link  {
+  .website_link {
     font-size: 13px;
     margin: 0 auto;
     max-width: 210px;
     overflow: hidden;
-    white-space:nowrap;
+    white-space: nowrap;
     text-overflow: ellipsis;
   }
   .website_link span {
