--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -83,13 +83,13 @@ blockquote {
         <div class="articles">
           <div class="flex_other_articles">
             <div class="contain_articles">
-              <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
+              <h3 style="margin-bottom: 18px;">Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
               <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) do %>
                 <div style="height: 366px; width: 100%; display: block; margin-bottom: 15px;"></div>
               <% end %>
               <div id="subscribe-widget" style="margin-top: 20px;">
                 <h4>Subscribe to our weekly newsletter</h4>
-                <small class="sub-text">Get notified of the top trending articles every week!</small>
+                <span class="sub-text">Get notified of the top trending articles every week!</span>
                 <small id="result-text"></small>
                 <%= form_for(:posts, url:"/posts/#{@post.id}/subscribe", remote: true, :html => {:id => "subscribe-form"}) do |f| %>
                   <%= f.text_field :email, placeholder: "Your Email", required: true, id: "email", onkeyup: "isFormButtonDisabled('#email')"%>
