--- a/app/assets/stylesheets/writer.css.scss
+++ b/app/assets/stylesheets/writer.css.scss
@@ -256,6 +256,7 @@ a {
           margin: 0;
           font-size: 0.8em;
           color: gray;
+          margin-top: -9px;
         }
         &:hover {
           background-color: WhiteSmoke;
