turned off adhesion ads for writers

--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -107,6 +107,7 @@
         <%= render "layouts/partials/footer" %>
       </div>
     </section>
+    <div id="mediavine-settings" data-blocklist-adhesion-mobile="1" data-blocklist-adhesion-tablet="1" data-blocklist-adhesion-desktop="1" data-blocklist-auto-insert-sticky="1" data-blocklist-interstitial-mobile="1" data-blocklist-universal-player-desktop="1" data-blocklist-universal-player-mobile="1" data-expires-at="2021-12-23"></div>
     <%= javascript_include_tag 'layout'%>
   </body>
 </html>
