--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,12 +12,19 @@
   <% end %>
 
   <% if current_user.admin? || current_user.editor? %>
-    <%= f.label "Approve profile" %>
-    <%= f.check_box :approved_profile, value: @user.approved_profile %><br /><br>
+    <%= f.label "Approve profile", :class => "mb-4" %>
+    <%= f.check_box :approved_profile, value: @user.approved_profile %>
     <%= f.hidden_field :submitted_profile, value: false %>
   <% elsif @user.approved_profile == false %>
     <%= f.hidden_field :submitted_profile, value: true %>
   <% end %>
+
+  <% if current_user.admin? && @user.editor && !@user.admin %>
+    <%= f.label "Skip assignment", :class => "ml-2" %>
+    <%= f.check_box :skip_assignment, value: @user.skip_assignment %>
+  <% end %>
+
+  <br>
 
   <% if current_user.admin? || (current_user.id.eql? @user.id) %>
     <%= f.label "First Name" %>
