--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,6 +14,9 @@
     <%= f.label "Partner Name" %>
     <%= f.text_field :full_name, placeholder: "Name" %>
 
+    <%= f.label "Website" %>
+    <%= f.text_field :website, placeholder: "Website" %>
+
     <%= f.label "Upload partner photo or logo" %><br>
     <%= f.file_field :profile %><br/><br/>
 
