--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,11 +29,11 @@
           <%= f.file_field :thumbnail %>
         </div>
       <% end %>
-      <p>Give credit for your thumbnail image (Required). To show correctly, use the formatting: company's name + comma + full url to their site. See placeholder for example.</p>
+      <p>Give credit for your thumbnail image (Required). To show correctly, use the formatting: company's name + comma + full url to the site. See placeholder for example.</p>
       <%= f.text_field :thumbnail_credits, placeholder: 'Pexels, https://www.pexels.com/', class: "mb-0" %>
       <p class="d-inline">Category:</p>
       <%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}, :class => "mdb-select md-form mb-3") %>
-      <% if @post.partner_id %>
+      <% if @post.partner_id || current_user.admin %>
         <p>Disclose partnership:
           <%= f.check_box :show_disclosure %>
           <i>
