updated to sponsored by

--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -41,7 +41,7 @@ blockquote {
             <% end %>
             <% if @partner_name %>
               <div class="chip">
-                PARTNERSHIP WITH
+                SPONSORED BY
                 <% if @partner.website %>
                   <%= link_to(@partner_name, link_helper(@partner.website), target: "_blank") %>
                 <% else %>
